{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 31,
  "lineage": "bb8f54f7-23e8-4492-3032-230fb5bded9c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-Terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017820697316:internet-gateway/igw-029359e09373ee439",
            "id": "igw-029359e09373ee439",
            "owner_id": "017820697316",
            "tags": {
              "Name": "IGW-Terra"
            },
            "tags_all": {
              "Name": "IGW-Terra"
            },
            "vpc_id": "vpc-0a122b0070da106f8"
          },
          "dependencies": [
            "aws_vpc.Vpc-Terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-Terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017820697316:route-table/rtb-0fc23b8cf4cb3e674",
            "id": "rtb-0fc23b8cf4cb3e674",
            "owner_id": "017820697316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-029359e09373ee439",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-Terra"
            },
            "tags_all": {
              "Name": "RT-Terra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a122b0070da106f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW-Terra",
            "aws_vpc.Vpc-Terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA-Terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01962078c9b37a446",
            "route_table_id": "rtb-0fc23b8cf4cb3e674",
            "subnet_id": "subnet-0b67e24991c897417"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-Terra",
            "aws_route_table.RT-Terra",
            "aws_subnet.Pub-Sub-Terra",
            "aws_vpc.Vpc-Terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-Terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017820697316:security-group/sg-08b474a3ada9e3afc",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b474a3ada9e3afc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_Terra",
            "name_prefix": "",
            "owner_id": "017820697316",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Terra"
            },
            "tags_all": {
              "Name": "SG-Terra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a122b0070da106f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Vpc-Terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pub-Sub-Terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017820697316:subnet/subnet-0b67e24991c897417",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b67e24991c897417",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "017820697316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-Sub-Terra"
            },
            "tags_all": {
              "Name": "Pub-Sub-Terra"
            },
            "vpc_id": "vpc-0a122b0070da106f8"
          },
          "dependencies": [
            "aws_vpc.Vpc-Terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Vpc-Terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017820697316:vpc/vpc-0a122b0070da106f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e110371265a8a937",
            "default_route_table_id": "rtb-087b04f0e9f69f252",
            "default_security_group_id": "sg-02e9df12eb89b7abe",
            "dhcp_options_id": "dopt-0331c3982c5236078",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a122b0070da106f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087b04f0e9f69f252",
            "owner_id": "017820697316",
            "tags": {
              "Name": "Vpc-Terra"
            },
            "tags_all": {
              "Name": "Vpc-Terra"
            }
          }
        }
      ]
    }
  ]
}